; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/serial/extr_68328serial.c_shutdown.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/serial/extr_68328serial.c_shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i64 }
%struct.m68k_serial = type { i64, i32, %struct.TYPE_6__, i64 }
%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 }

@uart_addr = common dso_local global %struct.TYPE_7__* null, align 8
@S_INITIALIZED = common dso_local global i32 0, align 4
@TTY_IO_ERROR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.m68k_serial*)* @shutdown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @shutdown(%struct.m68k_serial* %0) #0 {
  %2 = alloca %struct.m68k_serial*, align 8
  %3 = alloca %struct.TYPE_7__*, align 8
  %4 = alloca i64, align 8
  store %struct.m68k_serial* %0, %struct.m68k_serial** %2, align 8
  %5 = load %struct.TYPE_7__*, %struct.TYPE_7__** @uart_addr, align 8
  %6 = load %struct.m68k_serial*, %struct.m68k_serial** %2, align 8
  %7 = getelementptr inbounds %struct.m68k_serial, %struct.m68k_serial* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %5, i64 %8
  store %struct.TYPE_7__* %9, %struct.TYPE_7__** %3, align 8
  %10 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %10, i32 0, i32 0
  store i64 0, i64* %11, align 8
  %12 = load %struct.m68k_serial*, %struct.m68k_serial** %2, align 8
  %13 = getelementptr inbounds %struct.m68k_serial, %struct.m68k_serial* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 8
  %15 = load i32, i32* @S_INITIALIZED, align 4
  %16 = and i32 %14, %15
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %1
  br label %56

19:                                               ; preds = %1
  %20 = load i64, i64* %4, align 8
  %21 = call i32 @local_irq_save(i64 %20)
  %22 = load %struct.m68k_serial*, %struct.m68k_serial** %2, align 8
  %23 = getelementptr inbounds %struct.m68k_serial, %struct.m68k_serial* %22, i32 0, i32 3
  %24 = load i64, i64* %23, align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %33

26:                                               ; preds = %19
  %27 = load %struct.m68k_serial*, %struct.m68k_serial** %2, align 8
  %28 = getelementptr inbounds %struct.m68k_serial, %struct.m68k_serial* %27, i32 0, i32 3
  %29 = load i64, i64* %28, align 8
  %30 = call i32 @free_page(i64 %29)
  %31 = load %struct.m68k_serial*, %struct.m68k_serial** %2, align 8
  %32 = getelementptr inbounds %struct.m68k_serial, %struct.m68k_serial* %31, i32 0, i32 3
  store i64 0, i64* %32, align 8
  br label %33

33:                                               ; preds = %26, %19
  %34 = load %struct.m68k_serial*, %struct.m68k_serial** %2, align 8
  %35 = getelementptr inbounds %struct.m68k_serial, %struct.m68k_serial* %34, i32 0, i32 2
  %36 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %35, i32 0, i32 0
  %37 = load %struct.TYPE_5__*, %struct.TYPE_5__** %36, align 8
  %38 = icmp ne %struct.TYPE_5__* %37, null
  br i1 %38, label %39, label %47

39:                                               ; preds = %33
  %40 = load i32, i32* @TTY_IO_ERROR, align 4
  %41 = load %struct.m68k_serial*, %struct.m68k_serial** %2, align 8
  %42 = getelementptr inbounds %struct.m68k_serial, %struct.m68k_serial* %41, i32 0, i32 2
  %43 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %42, i32 0, i32 0
  %44 = load %struct.TYPE_5__*, %struct.TYPE_5__** %43, align 8
  %45 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %44, i32 0, i32 0
  %46 = call i32 @set_bit(i32 %40, i32* %45)
  br label %47

47:                                               ; preds = %39, %33
  %48 = load i32, i32* @S_INITIALIZED, align 4
  %49 = xor i32 %48, -1
  %50 = load %struct.m68k_serial*, %struct.m68k_serial** %2, align 8
  %51 = getelementptr inbounds %struct.m68k_serial, %struct.m68k_serial* %50, i32 0, i32 1
  %52 = load i32, i32* %51, align 8
  %53 = and i32 %52, %49
  store i32 %53, i32* %51, align 8
  %54 = load i64, i64* %4, align 8
  %55 = call i32 @local_irq_restore(i64 %54)
  br label %56

56:                                               ; preds = %47, %18
  ret void
}

declare dso_local i32 @local_irq_save(i64) #1

declare dso_local i32 @free_page(i64) #1

declare dso_local i32 @set_bit(i32, i32*) #1

declare dso_local i32 @local_irq_restore(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
